# kcgroups

./: .clang-format  .gitignore  .kde-ci.yml  CMakeLists.txt  Doxyfile.in  KF5CGroupsConfig.cmake.in  KF6CGroupsConfig.cmake.in  MAINTAINER  README.md  booster_main.cpp  foreground-booster.service.in  foregroundbooster.cpp  foregroundbooster.h  kcgroups.categories  metainfo.yaml  org.kde.foreground-booster.desktop  org.kde.foreground-booster.desktop.in  plasma-foreground-booster.service.in
examples/: CMakeLists.txt
examples/foreground-booster/: CMakeLists.txt  booster_main.cpp  boostersettings.kcfg  boostersettings.kcfgc  foregroundbooster.cpp  org.kde.foreground-booster.desktop  plasma-foreground-booster.service.in
foreground-booster/: CMakeLists.txt  booster_main.cpp  foregroundbooster.cpp  foregroundbooster.h
src/: CMakeLists.txt  dbustypes_p.h  kapplicationscope.cpp  kapplicationscope.h  kapplicationscope_p.h  kapplicationscopelister.cpp  kapplicationscopelister.h  kapplicationscopelister_p.h  kapplicationscopelistmodel.cpp  kapplicationscopelistmodel.h  kapplicationscopelistmodel_p.h  optional.h  optionalgadget.h
src/dbus/: org.freedesktop.DBus.Properties.xml  org.freedesktop.systemd1.Manager.xml  org.freedesktop.systemd1.Unit.xml
tests/: CMakeLists.txt  foregroundtest.cpp  main.cpp  main.qml  qml.qrc  spinner.cpp  spinner.qml
